--- a/afrimages/frontend/package.json
+++ b/afrimages/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "next": "^14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-file-base64": "^1.0.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
